reporter is added

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "playwright",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:chrome": "npx playwright test --config=tests/playwright.config.js --project=Chrome",
+    "test:firefox": "npx playwright test --config=tests/playwright.config.js --project=Firefox",
+    "test:webkit": "npx playwright test --config=tests/playwright.config.js --project=Webkit"
   },
   "author": "",
   "license": "ISC",
